<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@android:color/holo_blue_light">

    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"/>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/rv_crypto_description_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.example.meazou.projetandroid.CryptoDescription">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_blue_light"
            android:orientation="horizontal"
            android:paddingBottom="15dp"
            android:paddingTop="15dp">

            <TextView
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/crypto_name"
                android:textColor="@android:color/white"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/rv_crypto_description_name"
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#545454"
            android:orientation="horizontal"
            android:paddingBottom="15dp"
            android:paddingTop="15dp">

            <TextView
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/crypto_symbol"
                android:textColor="@android:color/white"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/rv_crypto_description_symbol"
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_blue_light"
            android:orientation="horizontal"
            android:paddingBottom="15dp"
            android:paddingTop="15dp">

            <TextView
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/crypto_rank"
                android:textColor="@android:color/white"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/rv_crypto_description_rank"
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#545454"
            android:orientation="horizontal"
            android:paddingBottom="15dp"
            android:paddingTop="15dp">

            <TextView
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/crypto_price"
                android:textColor="@android:color/white"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/rv_crypto_description_price"
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_blue_light"
            android:orientation="horizontal"
            android:paddingBottom="15dp"
            android:paddingTop="15dp">

            <LinearLayout
                android:layout_width="130dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/crypto_hour"
                    android:textColor="@android:color/white"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/rv_crypto_description_hourChanged"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@android:color/white"
                    android:textSize="24sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="126dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/crypto_day"
                    android:textColor="@android:color/white"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/rv_crypto_description_dailyChanged"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@android:color/white"
                    android:textSize="24sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="138dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/crypto_week"
                    android:textColor="@android:color/white"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/rv_crypto_description_weekChanged"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@android:color/white"
                    android:textSize="24sp" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            >

            <Button
                android:id="@+id/buttonBuy"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/buy"
                android:drawableLeft="@android:drawable/ic_dialog_info"
                android:textColor="@android:color/white"
                android:background="#545454"
                android:drawableStart="@android:drawable/ic_dialog_info" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            >

            <Button
                android:id="@+id/buttonBack"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/back"
                android:drawableLeft="@android:drawable/ic_media_previous"
                android:textColor="@android:color/white"
                android:background="#545454"
                android:drawableStart="@android:drawable/ic_media_previous" />
        </LinearLayout>

    </LinearLayout>


</RelativeLayout>